--- a/Project.toml
+++ b/Project.toml
@@ -8,4 +8,5 @@ BitConverter = "3a3ce9e8-98e7-11e9-0fa0-055639f146d3"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 Mods = "7475f97c-0381-53b1-977b-4c60186c8d62"
 Nettle = "49dea1ee-f6fa-5aa6-9a11-8816cee7d4b9"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
