implemented verifier as FSM

--- a/Project.toml
+++ b/Project.toml
@@ -10,3 +10,4 @@ Mods = "7475f97c-0381-53b1-977b-4c60186c8d62"
 Nettle = "49dea1ee-f6fa-5aa6-9a11-8816cee7d4b9"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+XMLDict = "228000da-037f-5747-90a9-8195ccbf91a5"
