--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,10 @@
-name = "Verificatum"
-uuid = "1f563a0d-7743-47a1-ae75-8271047b5d57"
+name = "ShuffleProofs"
+uuid = "31a120cc-b3cb-4d07-bbdb-d498660ddfd8"
 authors = ["akels <akels14@gmail.com>"]
 version = "0.1.0"
 
 [deps]
-BitConverter = "3a3ce9e8-98e7-11e9-0fa0-055639f146d3"
-Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
-Mods = "7475f97c-0381-53b1-977b-4c60186c8d62"
 Nettle = "49dea1ee-f6fa-5aa6-9a11-8816cee7d4b9"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 XMLDict = "228000da-037f-5747-90a9-8195ccbf91a5"
