--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["akels <akels14@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 Nettle = "49dea1ee-f6fa-5aa6-9a11-8816cee7d4b9"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
