--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,12 @@
 name = "ShuffleProofs"
 uuid = "31a120cc-b3cb-4d07-bbdb-d498660ddfd8"
-authors = ["Janis Erdmanis <akels14@gmail.com>"]
+authors = ["Janis Erdmanis <janiserdmanis@protonmail.ch>"]
 version = "0.2.1"
 
 [deps]
 CryptoGroups = "bc997328-bedd-407e-bcd3-5758e064a52d"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 CryptoGroups = "0.3"
@@ -15,6 +14,7 @@ julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+XMLDict = "228000da-037f-5747-90a9-8195ccbf91a5"
 
 [targets]
-test = ["Test"]
+test = ["Test", "XMLDict"]
