--- a/SigmaProofs/Project.toml
+++ b/SigmaProofs/Project.toml
@@ -9,13 +9,14 @@ CryptoPRG = "d846c407-34c1-46cb-aa27-d51818cc05e2"
 CryptoUtils = "04afed74-ac16-11e9-37b6-1352e3e05830"
 
 [compat]
-CryptoGroups = "0.4.1"
-CryptoPRG = "0.1.0"
+CryptoGroups = "0.5.0"
+CryptoPRG = "0.1.1"
 CryptoUtils = "0.1.1"
 Test = "1.11.0"
 
 [extras]
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "SafeTestsets"]
